# django-opentelemetry-signoz-tutorial

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  tests.yml
src/: manage.py
src/core/: __init__.py  settings.py  urls.py
src/polls/: admin.py
src/polls/migrations/: 0001_initial.py
src/polls/static/polls/: style.css
