[tool.poetry]
name = "django-official-tutorial"
version = "2024.11.23"
description = ""
authors = ["Ülgen Sarıkavak <oss@ulgenwanders.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dev-dependencies]
# Used by Django's find_formatters and run_formatters (with a monkey patch)
ruff = "0.8.1"

[tool.poetry.dependencies]
python = "^3.13"
django = "5.1.3"
django-debug-toolbar = "4.4.6"


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
# https://docs.astral.sh/ruff/rules/
select = [
    # https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    # https://github.com/gforcada/flake8-builtins
    "A",
    # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    # https://github.com/PyCQA/flake8-bugbear
    "B",
    # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    # https://github.com/elijahandrews/flake8-blind-except
    "BLE",
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    # https://github.com/adamchainz/flake8-comprehensions
    "C4",
    # https://docs.astral.sh/ruff/rules/#flake8-django-dj
    # https://github.com/rocioar/flake8-django
    "DJ",
    # https://docs.astral.sh/ruff/rules/#error-e
    # https://github.com/PyCQA/pycodestyle
    "E",
    # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    # https://github.com/henryiii/flake8-errmsg
    "EM",
    # https://docs.astral.sh/ruff/rules/#eradicate-era
    # https://github.com/PyCQA/eradicate
    "ERA",
    # https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    # https://github.com/xuhdev/flake8-executable
    "EXE",
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    # https://github.com/PyCQA/pyflakes
    "F",
    # https://docs.astral.sh/ruff/rules/#refurb-furb
    # https://github.com/dosisod/refurb
    "FURB",
    # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    # https://github.com/globality-corp/flake8-logging-format
    "G",
    # https://docs.astral.sh/ruff/rules/#isort-i
    # https://pycqa.github.io/isort/
    "I",
    # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
    # https://github.com/adamchainz/flake8-no-pep420
    "INP",
    # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    # https://github.com/adamchainz/flake8-logging
    "LOG",
    # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    # https://github.com/PyCQA/pep8-naming
    "N",
    # https://docs.astral.sh/ruff/rules/#perflint-perf
    # https://github.com/tonybaloney/perflint
    "PERF",
    # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    # https://github.com/pre-commit/pygrep-hooks
    "PGH",
    # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    # https://gitlab.com/RoPP/flake8-use-pathlib
    "PTH",
    # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    # https://github.com/jdufresne/flake8-raise
    "RSE",
    # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    # Project link is the astral/ruff website, so no external links.
    "RUF",
    # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    # https://github.com/tylerwince/flake8-bandit
    "S",
    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    # https://github.com/MartinThoma/flake8-simplify
    "SIM",
    # https://docs.astral.sh/ruff/rules/#flake8-print-t20
    # https://github.com/jbkahn/flake8-print
    "T20",
    # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    # https://github.com/adamchainz/flake8-tidy-imports
    "TID",
    # https://docs.astral.sh/ruff/rules/#tryceratops-try
    # https://github.com/guilatrova/tryceratops
    "TRY",
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    # https://github.com/asottile/pyupgrade
    "UP",
    # https://docs.astral.sh/ruff/rules/#warning-w
    # https://github.com/PyCQA/pycodestyle
    "W",
]

[tool.ruff.lint.per-file-ignores]
# RUF012 is violated by Django-generated migrations.
# Fixing them manually each time doesn't seem to add value.
# https://docs.astral.sh/ruff/rules/mutable-class-default/
"**/migrations/*" = ["RUF012"]

[tool.isort]
# We don't use black directly but ruff uses the same profile name with isort.
profile = "black"

# I really don't know why ruff expects two different isort sections - @ulgens
[tool.ruff.lint.isort]
known-first-party = ["polls"]


[build-system]
# Earliest version with Python 3.13 support
# https://github.com/python-poetry/poetry-core/releases/tag/1.9.1
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"
